add session question endpoints
