# internal/handler/v1/request/session_question.go
@@ -1,0 +1,5 @@
+package request
+
+type SessionQuestionUpdate struct {
+	Answer string `json:"answer" validate:"required,min=1,max=500"`
+}
